@@ -4,6 +4,7 @@ import com.athaydes.logfx.concurrency.IdentifiableRunnable;
 import com.athaydes.logfx.concurrency.TaskRunner;
 import com.athaydes.logfx.config.Config;
 import com.athaydes.logfx.data.LinesScroller;
+import com.athaydes.logfx.data.LinesSetter;
 import com.athaydes.logfx.data.LogFile;
 import com.athaydes.logfx.data.LogLineColors;
 import com.athaydes.logfx.file.FileChangeWatcher;
@@ -25,24 +26,24 @@ import javafx.collections.ObservableList;
 import javafx.scene.Node;
 import javafx.scene.layout.VBox;
 import javafx.scene.paint.Color;
+import javafx.util.Pair;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.io.File;
+import java.time.Duration;
 import java.time.ZonedDateTime;
-import java.util.Iterator;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import java.util.concurrent.CompletableFuture;
-import java.util.concurrent.CompletionStage;
-import java.util.concurrent.ExecutorService;
-import java.util.concurrent.Executors;
+import java.util.concurrent.*;
+import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicLong;
+import java.util.concurrent.locks.ReentrantLock;
 import java.util.function.Consumer;
 import java.util.function.DoubleConsumer;
 import java.util.function.IntConsumer;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 /**
  * View of a log file.
@@ -56,9 +57,12 @@ public class LogView extends VBox implements SelectableContainer {
 
     public static final int MAX_LINES = 512;
 
+    private static final Duration minGapDuration = Duration.ofMillis( 50 );
+
     private final ExecutorService fileReaderExecutor = Executors.newSingleThreadExecutor();
     private final BooleanProperty tailingFile = new SimpleBooleanProperty( false );
     private final BooleanProperty allowRefresh = new SimpleBooleanProperty( true );
+    private final BooleanProperty showTimeGap = new SimpleBooleanProperty( false );
     private final Config config;
     private final LogLineHighlighter highlighter;
     private final FileContentReader fileContentReader;
@@ -67,7 +71,9 @@ public class LogView extends VBox implements SelectableContainer {
     private final TaskRunner taskRunner;
     private final SelectionHandler selectionHandler;
     private final DateTimeFormatGuesser dateTimeFormatGuesser = DateTimeFormatGuesser.standard();
-    private final LinesScroller linesScroller = new LinesScroller( MAX_LINES, this::lineContent, this::setLine );
+    private final LinesScroller linesScroller = new LinesScroller( MAX_LINES, this::lineContent,
+            new LinesSetter( this::updateLines ) );
+    private final ReentrantLock linesLock = new ReentrantLock( true );
 
     private volatile Consumer<Boolean> onFileExists = ( ignore ) -> {
     };
@@ -95,6 +101,10 @@ public class LogView extends VBox implements SelectableContainer {
         this.expressionsChangeListener = ( Observable o ) -> immediateOnFileChange();
 
         logFile.highlightGroupProperty().addListener( expressionsChangeListener );
+        showTimeGap.addListener( ( Observable o ) -> {
+            log.debug( "Updated time gap property: {}", o );
+            updateWith( getLines() );
+        } );
 
         this.highlighter = new LogLineHighlighter( config, expressionsChangeListener, logFile );
 
@@ -150,6 +160,14 @@ public class LogView extends VBox implements SelectableContainer {
     @Override
     public CompletionStage<SelectionHandler.SelectableNode> previousSelectable() {
         return loadNextSelectable( true );
+    }
+
+    public Optional<Pair<SelectionHandler.SelectableNode, SelectionHandler.SelectableNode>> getSelectableEnds() {
+        var children = getChildren();
+        if ( !children.isEmpty() ) {
+            return Optional.of( new Pair<>( lineAt( 0 ), lineAt( children.size() - 1 ) ) );
+        }
+        return Optional.empty();
     }
 
     private CompletionStage<SelectionHandler.SelectableNode> loadNextSelectable( boolean up ) {
@@ -240,6 +258,10 @@ public class LogView extends VBox implements SelectableContainer {
         return tailingFile;
     }
 
+    BooleanProperty timeGapProperty() {
+        return showTimeGap;
+    }
+
     void toTop() {
         fileReaderExecutor.execute( () -> {
             fileContentReader.top();
@@ -250,7 +272,7 @@ public class LogView extends VBox implements SelectableContainer {
     void goTo( ZonedDateTime dateTime, IntConsumer whenDoneAcceptLineNumber ) {
         fileReaderExecutor.execute( () -> {
             if ( dateTimeFormatGuess == null ) {
-                findFileDateTimeFormatterFromFileContents();
+                findFileDateTimeFormatterFromFileContents( Optional.empty() );
             }
             if ( dateTimeFormatGuess == null ) {
                 log.warn( "Could not guess date-time format from this log file, " +
@@ -300,20 +322,33 @@ public class LogView extends VBox implements SelectableContainer {
         this.onFileUpdate = onFileUpdate;
     }
 
-    private void setLine( int index, String line ) {
-        LogLine logLine = lineAt( index );
-        // avoid wasting resources
-        if ( logLine.getText().equals( line ) ) return;
-        LogLineColors logLineColors = highlighter.logLineColorsFor( line );
-        logLine.setText( line, logLineColors );
+    private String lineContent( int index ) {
+        return lineAt( index ).getText();
+    }
+
+    private List<String> getLines() {
+        var result = new ArrayList<String>( MAX_LINES );
+        for ( int i = 0; i < MAX_LINES; i++ ) {
+            result.add( lineContent( i ) );
+        }
+        return result;
+    }
+
+    private void updateLines( List<LinesSetter.LineChange> changes ) {
+        var allLines = new String[ MAX_LINES ];
+        for ( var change : changes ) {
+            allLines[ change.index() ] = change.text();
+        }
+        updateWith( List.of( allLines ) );
     }
 
     // must be called from fileReaderExecutor Thread
-    private void findFileDateTimeFormatterFromFileContents() {
-        Optional<? extends List<String>> lines = fileContentReader.refresh();
-        if ( lines.isPresent() ) {
+    private void findFileDateTimeFormatterFromFileContents(
+            @SuppressWarnings( "OptionalUsedAsFieldOrParameterType" ) Optional<List<String>> lines ) {
+        Optional<? extends List<String>> maybeLines = lines.or( fileContentReader::refresh );
+        if ( maybeLines.isPresent() ) {
             dateTimeFormatGuess = dateTimeFormatGuesser
-                    .guessDateTimeFormats( lines.get() )
+                    .guessDateTimeFormats( maybeLines.get() )
                     .orElse( null );
         } else {
             log.warn( "Unable to extract any date-time formatters from file as the file could not be read: {}",
@@ -356,7 +391,7 @@ public class LogView extends VBox implements SelectableContainer {
                 fileContentReader.tail();
             }
             Optional<? extends List<String>> lines = fileContentReader.refresh();
-            lines.ifPresent( list -> updateWith( list.iterator() ) );
+            lines.ifPresent( this::updateWith );
             try {
                 onFileExists.accept( lines.isPresent() );
             } finally {
@@ -365,40 +400,94 @@ public class LogView extends VBox implements SelectableContainer {
         } );
     }
 
-    private void updateWith( Iterator<String> lines ) {
-        int index = 0;
+    private void updateWith( List<String> lines ) {
+        final boolean computeTimeGap = showTimeGap.get();
+        fileReaderExecutor.execute( () -> {
+            int index = 0;
+            // unlock happens either when an error happens in this Thread or when all lines have been updated
+            linesLock.lock();
+            var cancelled = new AtomicBoolean( false );
+            var latch = new CountDownLatch( Math.max( lines.size(), MAX_LINES ) );
 
-        while ( lines.hasNext() ) {
-            final int currentIndex = index;
-            final String lineText = lines.next();
-            Platform.runLater( () -> {
-                LogLine line = lineAt( currentIndex );
-                updateLine( line, lineText );
-            } );
-            index++;
+            try {
+                for ( ; index < lines.size() && !cancelled.get(); index++ ) {
+                    final String lineText = lines.get( index );
+                    final String prevLineText = ( index > 0 && computeTimeGap )
+                            ? lines.get( index - 1 )
+                            : null;
+
+                    // null line: leave the line alone and proceed
+                    if ( lineText == null ) {
+                        latch.countDown();
+                        continue;
+                    }
+
+                    var timeGap = prevLineText == null ? null : resolveTimeGap( prevLineText, lineText, Optional.of( lines ) );
+                    final int currentIndex = index;
+
+                    Platform.runLater( () -> {
+                        if ( cancelled.get() ) return;
+                        try {
+                            LogLine line = lineAt( currentIndex );
+                            line.setText( lineText, highlighter.logLineColorsFor( lineText ), timeGap );
+                        } finally {
+                            latch.countDown();
+                        }
+                    } );
+                }
+
+                // fill the remaining lines with the empty String
+                for ( ; index < MAX_LINES; index++ ) {
+                    final int currentIndex = index;
+                    Platform.runLater( () -> {
+                        if ( cancelled.get() ) return;
+                        try {
+                            LogLine line = lineAt( currentIndex );
+                            line.setText( "", highlighter.logLineColorsFor( "" ), null );
+                        } finally {
+                            latch.countDown();
+                        }
+                    } );
+                }
+            } catch ( Exception e ) {
+                cancelled.set( true );
+                linesLock.unlock();
+                return;
+            }
+
+            try {
+                var ok = latch.await( 15, TimeUnit.SECONDS );
+                if ( !ok ) {
+                    log.warn( "Timeout while trying to update log lines" );
+                }
+            } catch ( InterruptedException e ) {
+                log.warn( "Interrupted while trying to update log lines" );
+            } finally {
+                cancelled.set( true );
+                linesLock.unlock();
+            }
+        } );
+    }
+
+    // must be called from fileReaderExecutor Thread
+    private Duration resolveTimeGap( String prevLineText, String lineText,
+                                     @SuppressWarnings( "OptionalUsedAsFieldOrParameterType" ) Optional<List<String>> allLines ) {
+        if ( dateTimeFormatGuess == null ) {
+            findFileDateTimeFormatterFromFileContents( allLines );
         }
-
-        // fill the remaining lines with the empty String
-        for ( ; index < MAX_LINES; index++ ) {
-            final int currentIndex = index;
-            Platform.runLater( () -> {
-                LogLine line = lineAt( currentIndex );
-                updateLine( line, "" );
-            } );
+        var guess = dateTimeFormatGuess;
+        if ( guess != null ) {
+            var gap = guess.guessDateTime( prevLineText ).flatMap( prev ->
+                            guess.guessDateTime( lineText )
+                                    .map( t -> Duration.between( prev, t ) ) )
+                    .orElse( null );
+            var showGap = gap != null && gap.compareTo( minGapDuration ) > 0;
+            log.debug( "Resolved time gap: {}, display? {}", gap, showGap );
+            return showGap ? gap : null;
         }
+        return null;
     }
 
-    @MustCallOnJavaFXThread
-    private void updateLine( LogLine line, String text ) {
-        LogLineColors logLineColors = highlighter.logLineColorsFor( text );
-        line.setText( text, logLineColors );
-    }
-
-    private String lineContent( int index ) {
-        return lineAt( index ).getText();
-    }
-
-    @MustCallOnJavaFXThread
     private LogLine lineAt( int index ) {
         return ( LogLine ) getChildren().get( index );
     }
@@ -458,7 +547,7 @@ public class LogView extends VBox implements SelectableContainer {
             if ( config.filtersEnabledProperty().get() ) {
                 List<HighlightExpression> filteredExpressions = observableExpressions.stream()
                         .filter( HighlightExpression::isFiltered )
-                        .collect( Collectors.toList() );
+                        .toList();
                 return Optional.of( ( line ) -> filteredExpressions.stream()
                         .anyMatch( ( exp ) -> exp.matches( line ) ) );
             } else {
@@ -476,6 +565,9 @@ public class LogView extends VBox implements SelectableContainer {
                 observableExpressions = config.getHighlightGroups().getDefault();
                 Platform.runLater( () -> logFile.highlightGroupProperty().setValue( "" ) );
             }
+
+            // observableExpressions cannot be null here
+            //noinspection DataFlowIssue
             observableExpressions.addListener( expressionsChangeListener );
         }
 
